--- a/SportHub.API/appsettings.json
+++ b/SportHub.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=test;user=root;password=rootadmin2022"
+  },
   "AllowedHosts": "*"
 }
