Add access token generation

--- a/SportHub.API/appsettings.json
+++ b/SportHub.API/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;database=test;user=root;password=rootadmin2022"
   },
+  "JwtSettings": {
+    "SecretKey": "adfjakjsf8934853hhsf28374y2rsdf",
+    "ExpiresInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
