--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-use-localstorage": "^3.5.3",
     "zustand": "^4.3.7"
   },
   "scripts": {
