--- a/SportHub.Business/SportHub.Business.csproj
+++ b/SportHub.Business/SportHub.Business.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0-preview.2.23128.3" />
     <PackageReference Include="MySql.Data" Version="8.0.32.1" />
