Add EmailService and send email with activation link to the user gmail

--- a/SportHub.API/appsettings.json
+++ b/SportHub.API/appsettings.json
@@ -12,5 +12,9 @@
     "SecretKey": "adfjakjsf8934853hhsf28374y2rsdf",
     "ExpiresInMinutes": 60
   },
+  "EmailSettings": {
+    "SenderEmail": "SportHubEmail@gmail.com",
+    "SenderPassword": "jtoesxhgiveuzncr"
+  },
   "AllowedHosts": "*"
 }
