--- a/SportHub.API/appsettings.json
+++ b/SportHub.API/appsettings.json
@@ -16,5 +16,9 @@
     "SenderEmail": "SportHubEmail@gmail.com",
     "SenderPassword": "jtoesxhgiveuzncr"
   },
+  "GoogleCredentials": {
+    "ClientId": "1053346154092-0ht8fsk771fsnn1lvd5a94e3r5etphle.apps.googleusercontent.com",
+    "ClientSecret": "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"
+  },
   "AllowedHosts": "*"
 }
