--- a/SportHub.API/SportHub.API.csproj
+++ b/SportHub.API/SportHub.API.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SportHub.Business\SportHub.Business.csproj" />
+    <ProjectReference Include="..\SportHub.Data\SportHub.Data.csproj" />
   </ItemGroup>
 
 </Project>
