--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -15,12 +15,15 @@
     "axios": "^1.3.4",
     "crypto-js": "^4.1.1",
     "dotenv-webpack": "^8.0.1",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.8",
     "react-use-localstorage": "^3.5.3",
+    "sass": "^1.62.0",
     "zustand": "^4.3.7"
   },
   "scripts": {
