--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.8",
     "react-use-localstorage": "^3.5.3",
+    "react-xarrows": "^2.0.2",
     "sass": "^1.62.0",
     "zustand": "^4.3.7"
   },
