--- a/SportHub.UnitTests/SportHub.UnitTests.csproj
+++ b/SportHub.UnitTests/SportHub.UnitTests.csproj
@@ -18,4 +18,11 @@
         <PackageReference Include="coverlet.collector" Version="3.1.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SportHub.API\SportHub.API.csproj" />
+      <ProjectReference Include="..\SportHub.Business\SportHub.Business.csproj" />
+      <ProjectReference Include="..\SportHub.Database\SportHub.Database.csproj" />
+      <ProjectReference Include="..\SportHub.Data\SportHub.Data.csproj" />
+    </ItemGroup>
+
 </Project>
