--- a/SportHub.API/appsettings.json
+++ b/SportHub.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=SportHub;user=user;password=root"
+    "DefaultConnection": "server=localhost;database=SportHub;user=root;password=rootadmin2022"
   },
   "JwtSettings": {
     "SecretKey": "adfjakjsf8934853hhsf28374y2rsdf",
