--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.7",
     "react-use-localstorage": "^3.5.3",
+    "sass": "^1.62.1",
     "zustand": "^4.3.7"
   },
   "scripts": {
