fix comments: move to config frontend url + add TODO + change to tuple

--- a/SportHub.API/appsettings.json
+++ b/SportHub.API/appsettings.json
@@ -8,6 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;database=SportHub;user=root;password=rootadmin2022"
   },
+  "Frontend": {
+    "Url": "http://localhost:3000"
+  },
   "JwtSettings": {
     "SecretKey": "adfjakjsf8934853hhsf28374y2rsdf",
     "ExpiresInMinutes": 60
