--- a/SportHub.Business/SportHub.Business.csproj
+++ b/SportHub.Business/SportHub.Business.csproj
@@ -11,10 +11,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0-preview.2.23128.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="MySql.Data" Version="8.0.32.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.28.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Services\Emails\account-activation-email.html" />
+    <EmbeddedResource Include="Services\Emails\account-activation-email.html" />
+    <None Remove="Services\Emails\password-reset-email.html" />
+    <EmbeddedResource Include="Services\Emails\password-reset-email.html" />
   </ItemGroup>
 
 </Project>
