--- a/SportHub.IntegrationTests/SportHub.IntegrationTests.csproj
+++ b/SportHub.IntegrationTests/SportHub.IntegrationTests.csproj
@@ -10,7 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper" Version="12.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.5" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0-preview.2.23128.3" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
         <PackageReference Include="Moq" Version="4.18.4" />
         <PackageReference Include="NUnit" Version="3.13.3" />
@@ -22,8 +23,6 @@
     <ItemGroup>
       <ProjectReference Include="..\SportHub.API\SportHub.API.csproj" />
       <ProjectReference Include="..\SportHub.Business\SportHub.Business.csproj" />
-      <ProjectReference Include="..\SportHub.Database\SportHub.Database.csproj" />
-      <ProjectReference Include="..\SportHub.Data\SportHub.Data.csproj" />
     </ItemGroup>
 
 </Project>
