--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -8,7 +8,7 @@
     "@mui/material": "^5.11.16",
     "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-buddy/palette-mui": "^5.0.1",
-    "@react-oauth/google": "^0.10.0",
+    "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +17,7 @@
     "crypto-js": "^4.1.1",
     "dotenv-webpack": "^8.0.1",
     "jwt-decode": "^3.1.2",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
@@ -25,7 +26,8 @@
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.7",
     "react-use-localstorage": "^3.5.3",
-    "sass": "^1.62.1",
+    "react-xarrows": "^2.0.2",
+    "sass": "^1.62.0",
     "zustand": "^4.3.7"
   },
   "scripts": {
