--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -16,11 +16,15 @@
     "axios": "^1.3.4",
     "crypto-js": "^4.1.1",
     "dotenv-webpack": "^8.0.1",
+    "i18next": "^22.5.0",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
+    "react-i18next": "^12.3.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
