--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@draft-js-plugins/editor": "^4.1.3",
+    "@draft-js-plugins/static-toolbar": "^4.1.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/lab": "^5.0.0-alpha.128",
     "@mui/material": "^5.11.16",
     "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-buddy/palette-mui": "^5.0.1",
@@ -15,12 +18,18 @@
     "axios": "^1.3.4",
     "crypto-js": "^4.1.1",
     "dotenv-webpack": "^8.0.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.8",
     "react-use-localstorage": "^3.5.3",
+    "sass": "^1.62.0",
     "zustand": "^4.3.7"
   },
   "scripts": {
