--- a/SportHub.Data/SportHub.Data.csproj
+++ b/SportHub.Data/SportHub.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0-preview.2.23128.3" />
     <PackageReference Include="MySql.Data" Version="8.0.32.1" />
   </ItemGroup>
