--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-i18next": "^12.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -62,6 +63,12 @@
   "devDependencies": {
     "eslint-config-react-app": "^7.0.1",
     "jest-editor-support": "^31.0.1",
+    "msw": "^1.2.2",
     "sass": "^1.62.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
