--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -3,11 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@draft-js-plugins/editor": "^4.1.3",
-    "@draft-js-plugins/static-toolbar": "^4.1.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/lab": "^5.0.0-alpha.128",
     "@mui/material": "^5.11.16",
     "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-buddy/palette-mui": "^5.0.1",
@@ -21,17 +18,20 @@
     "dotenv-webpack": "^8.0.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
-    "html-to-draftjs": "^1.5.0",
-    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next": "^22.5.0",
+    "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-google-button": "^0.7.2",
     "react-i18next": "^12.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "^5.0.1",
-    "react-svg": "^16.1.8",
+    "react-scripts": "5.0.1",
+    "react-svg": "^16.1.7",
     "react-use-localstorage": "^3.5.3",
     "react-xarrows": "^2.0.2",
     "sass": "^1.62.0",
@@ -64,6 +64,13 @@
   },
   "devDependencies": {
     "eslint-config-react-app": "^7.0.1",
-    "jest-editor-support": "^31.0.1"
+    "jest-editor-support": "^31.0.1",
+    "msw": "^1.2.2",
+    "sass": "^1.62.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
