--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -21,6 +21,7 @@
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.1",
+    "jotai": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
