--- a/SportHub.API/appsettings.json
+++ b/SportHub.API/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=SportHub;user=user;password=root"
+    "DefaultConnection": "Server=\"sporthub-db.mysql.database.azure.com\";UserID = \"user\";Password=\"jajGyg-2kygzi-cuxjop\";Database=\"SportHub\";SslMode=Required;SslCa=\"/Users/krilooleh/Documents/DigiCertGlobalRootCA.crt.pem\";"
   },
   "Frontend": {
-    "Url": "http://localhost:3000"
+    "Url": "https://sporthub-client.vercel.app"
   },
   "JwtSettings": {
     "SecretKey": "adfjakjsf8934853hhsf28374y2rsdf",
