--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -18,10 +18,11 @@
     "dotenv-webpack": "^8.0.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.1",
-    "jotai": "^2.2.1",
+    "jotai": "^2.2.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
