replace Environment.GetEnvironmentVariable("DB_USER_PASSWORD") to actual password

--- a/SportHub.API/appsettings.json
+++ b/SportHub.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=\"sporthub-db.mysql.database.azure.com\";UserID = \"user\";Password=\"Environment.GetEnvironmentVariable(\"DB_USER_PASSWORD\")\";Database=\"SportHub\";SslMode=Required;SslCa=\"/Users/krilooleh/Documents/DigiCertGlobalRootCA.crt.pem\";"
+    "DefaultConnection": "Server=\"sporthub-db.mysql.database.azure.com\";UserID = \"user\";Password=\"jajGyg-2kygzi-cuxjop\";Database=\"SportHub\";SslMode=Required;SslCa=\"/Users/krilooleh/Documents/DigiCertGlobalRootCA.crt.pem\";"
   },
   "Frontend": {
     "Url": "https://sporthub-client.vercel.app"
