--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "crypto-js": "^4.1.1",
     "dotenv-webpack": "^8.0.1",
+    "framer-motion": "^10.12.18",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.1",
@@ -30,12 +31,13 @@
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.7",
     "react-use-localstorage": "^3.5.3",
+    "react-uuid": "^2.0.0",
     "react-xarrows": "^2.0.2",
     "sass": "^1.62.0",
     "zustand": "^4.3.7"
   },
   "scripts": {
-    "start": "set HTTPS=true&&react-scripts start",
+    "start": "set HTTPS=true&&set SSL_CRT_FILE=C:/Users/Admin/AppData/Roaming/ASP.NET/https/cert.crt&&set SSL_KEY_FILE=C:/Users/Admin/AppData/Roaming/ASP.NET/https/cert.key&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
