--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -16,15 +16,18 @@
     "axios": "^1.3.4",
     "crypto-js": "^4.1.1",
     "dotenv-webpack": "^8.0.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.1",
     "jwt-decode": "^3.1.2",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-google-button": "^0.7.2",
     "react-i18next": "^12.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -62,6 +65,12 @@
   "devDependencies": {
     "eslint-config-react-app": "^7.0.1",
     "jest-editor-support": "^31.0.1",
+    "msw": "^1.2.2",
     "sass": "^1.62.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
