--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.16",
+    "@mui/material": "^5.14.0",
+    "@mui/x-data-grid": "^6.10.0",
     "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-buddy/palette-mui": "^5.0.1",
     "@react-oauth/google": "^0.11.0",
@@ -18,6 +19,7 @@
     "dotenv-webpack": "^8.0.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "framer-motion": "^10.12.20",
     "html-to-draftjs": "^1.5.0",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
