--- a/SportHub/package.json
+++ b/SportHub/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "crypto-js": "^4.1.1",
+    "dompurify": "^3.0.5",
     "dotenv-webpack": "^8.0.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
